--- a/Main.html
+++ b/Main.html
@@ -13,7 +13,7 @@
   <body>
 
     <header class="header">
-      <a href="#" class="logo">Portfolio</a>
+      <a href="#" class="logo">PedroHbs</a>
 
       <i class="bx bx-menu" id="menu-celular"></i>
 
