--- a/Main.html
+++ b/Main.html
@@ -18,15 +18,15 @@
       <i class="bx bx-menu" id="menu-celular"></i>
 
       <nav class="navbar">
-        <a href="#Home" class="active">Home</a>
-        <a href="#Sobre">Sobre</a>
-        <a href="#Exp">Experiências</a>
-        <a href="#Portfolio">Portfolio</a>
-        <a href="#Contato">Contato</a>
+        <a href="#home" class="active">Home</a>
+        <a href="#sobre">Sobre</a>
+        <a href="#exp">Experiências</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#contato">Contato</a>
       </nav>
     </header>
 
-    <section class="home" id="Home">
+    <section class="home" id="home">
       <video
         onloadstart="this.playbackRate = 0.5;"
         class="videobg"
@@ -69,7 +69,7 @@
       </div> -->
     </section>
 
-    <section class="sobre" id="Sobre">
+    <section class="sobre" id="sobre">
       <div class="img-sobre">
         <img src="midia/pictures/sobre.svg" alt="" />
       </div>
@@ -86,7 +86,7 @@
       </div>
     </section>
 
-    <section class="experiencias" id="Exp">
+    <section class="experiencias" id="exp">
       <h2 class="principal-sobre"> Minhas <span>Experiências!</span></h2>
 
       <div class="exp-container">
@@ -129,7 +129,7 @@ Japonês (A1)
       </div>
     </section>
 
-    <section class="portfolio" id="Portfolio">
+    <section class="portfolio" id="portfolio">
       <h2 class="principal-sobre"> Últimos <span>Projetos</span> </h2>
 
       <div class="portfolio-container">
@@ -182,7 +182,7 @@ Japonês (A1)
 
     </section>
 
-    <section class="contato" id="Contato">
+    <section class="contato" id="contato">
       <h2 class="principal-sobre"> Entre em <span>contato!</span> </h2>
 
       <form action="https://formsubmit.co/cff3b84938f5937a17cdfeb3be84be5f" method="POST">
@@ -205,9 +205,13 @@ Japonês (A1)
       </div>
 
       <div class="footer-iconTop">
-        <a href="#Home"><i class='bx bx-up-arrow-alt'></i></a>
+        <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
       </div>
     </footer>
+
+
+
+    <script src="Main.js"></script>
 
   </body>
 </html>
