--- a/Main.html
+++ b/Main.html
@@ -40,7 +40,7 @@
 
       <div class="home-content">
         <h1>Pedro Henrique</h1>
-        <h3>Pesquisador | Desenvolvedor @ <span>UFABC</span></h3>
+        <h3>  <k class="multiple-text"></k> @ <span>UFABC</span></h3>
 
         <div class="redes">
           <a href="https://www.linkedin.com/in/pedro-henrique-88a810186/"
@@ -211,6 +211,9 @@ Japonês (A1)
 
 
 
+
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="Main.js"></script>
 
   </body>
