--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ Japonês (A1)
       <div class="portfolio-container">
         
         <div class="portfolio-box">
-          <img src="/midia/pictures/cdz.png" alt="">
+          <img src="midia/pictures/cdz.png" alt="">
           <div class="portfolio-layer">
             <h4>Gran-Ultimate</h4>
             <p>Um site criado para atender um grupo focado em Cavaleiros do Zodíaco, contando com sistema automático de inscrições através de formulário integrado ao Google Planilhas.</p>
@@ -144,7 +144,7 @@ Japonês (A1)
         </div>
 
         <div class="portfolio-box">
-          <img src="/midia/pictures/movel.png" alt="">
+          <img src="midia/pictures/movel.png" alt="">
           <div class="portfolio-layer">
             <h4>Móvel Smart</h4>
             <p>Um site criado para atender uma marcenaria, criado para servir como um portfólio na nuvem, além de também ter um sistema de recebimento e envio de e-mails. Facilitando a comunicação com o cliente.</p>
@@ -153,7 +153,7 @@ Japonês (A1)
         </div>
 
         <div class="portfolio-box">
-          <img src="/midia/pictures/faz.png" alt="">
+          <img src="midia/pictures/faz.png" alt="">
           <div class="portfolio-layer">
             <h4>Vai e Faz</h4>
             <p>Um site criado para atender uma empresa focada em prestação de assitência técnica de forma remota.</p>
@@ -162,7 +162,7 @@ Japonês (A1)
         </div>
 
         <div class="portfolio-box">
-          <img src="/midia/pictures/imc.png" alt="">
+          <img src="midia/pictures/imc.png" alt="">
           <div class="portfolio-layer">
             <h4>Calculadora IMC</h4>
             <p>Aplicativo android desenvolvido para realizar o cálculo do IMC do usuário de modo simples, intuitivo e rápido.</p>
@@ -171,7 +171,7 @@ Japonês (A1)
         </div>
 
         <div class="portfolio-box">
-          <img src="/midia/pictures/nomes.png" alt="">
+          <img src="midia/pictures/nomes.png" alt="">
           <div class="portfolio-layer">
             <h4>Gerador de Nomes</h4>
             <p>Um gerador de nomes para android! Feito para ser simples e intuitivo (seja para o uso em RPG's, projetos de escrita, etc). Também é possível marcar os nomes que mais gostar para separá-los em um menu de favoritos!</p>
