--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Js
 
         <div class="exp-box">
           <i class='bx bxs-data' ></i>
-          <h3>Analise de dados</h3>
+          <h3>Análise de dados</h3>
           <p>Análise de dados esteve muito presente na minha vida profissional/acadêmica (Iniciação científica) desde que iniciei meus estudos na graduação.</p>
           <pre>R 
 Python 
@@ -131,7 +131,7 @@ Japonês (A1)
 
     <section class="portfolio" id="portfolio">
       <h2 class="principal-sobre"> Últimos <span>Projetos</span> </h2>
-
+      <h3>toque nas imagens para saber mais*</h3>
       <div class="portfolio-container">
         
         <div class="portfolio-box">
