--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet" 
     />
+    <link rel="icon" type="image/x-icon" href="midia/pictures/ICO.ico">
     <title>PedroHbs - Portfólio</title>
   </head>
   <body>
