--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@ Js
           <pre>R 
 Python 
 Power BI
+SQL
           </pre>
           <a class="btn" href="https://www.linkedin.com/in/pedro-henrique-88a810186/">Ver mais</a>
         </div>
