--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
 
         <a
-          href="https://drive.google.com/file/d/1KVdbvMT4LOaCBClUpLJ4qIAWITOlGXC0/view?usp=sharing"
+          href="https://drive.google.com/file/d/1KXlzUqdR5uGK7EjQoeghm3aSsCcKvFit/view?usp=sharing"
           class="btn"
           >Baixar CV</a
         >
@@ -121,8 +121,8 @@ SQL
           <h3>Idiomas</h3>
           <p>O estudo de idiomas é um dos meus hobbies preferidos. Por enquanto, foco minha atenção nessas 4 línguas:</p>
           <pre>
-Português (Fluente)
-Inglês (C2)
+Português (Nativo - Fluente)
+Inglês (C2 - Fluente)
 Alemão (A2)
 Japonês (A1)
           </pre>
@@ -130,6 +130,8 @@ Japonês (A1)
         </div>
       </div>
     </section>
+
+    
 
     <section class="portfolio" id="portfolio">
       <h2 class="principal-sobre"> Últimos <span>Projetos</span> </h2>
