--- a/index.html
+++ b/index.html
@@ -131,7 +131,25 @@ Japonês (A1)
       </div>
     </section>
 
+    <section class="certificados" id="ctf">
+      <h2 class="principal-sobre"> Minhas <span>Certificações!</span></h2>
+      <div class="ctf-container">
+        <div class="ctf-box">
+          <h3>Inglês</h3>
+          <a href="https://www.efset.org/cert/8va9ut"><img src="midia/pictures/ef_certificate.png"></a>
+        </div>
     
+        <div class="ctf-box-main">
+          <h3>Análise de Dados</h3>
+          <a href="https://coursera.org/verify/professional-cert/9YGG6WLQPK59"><img src="midia/pictures/google_certificate.png"></a>
+        </div>
+    
+        <div class="ctf-box">
+          <h3>Power Bi</h3>
+          <a href="https://www.linkedin.com/learning/certificates/424fdc27d1c844c035b9c7ab3ba0830322c851a9b2e105e474f13ef52e56b363"><img  src="midia/pictures/powerbi_certificate.png"></a>
+        </div>
+      </div>
+    </section>
 
     <section class="portfolio" id="portfolio">
       <h2 class="principal-sobre"> Últimos <span>Projetos</span> </h2>
