--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <a href="#home" class="active">Home</a>
         <a href="#sobre">Sobre</a>
         <a href="#exp">Experiências</a>
+        <a href="#ctf">Certificações</a>
         <a href="#portfolio">Portfolio</a>
         <a href="#contato">Contato</a>
       </nav>
