--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Python
 Java 
 Js
           </pre>
-          <a class="btn" href="https://www.linkedin.com/in/pedro-henrique-88a810186/">Ver mais</a>
+          <a class="btn" href="https://www.linkedin.com/in/pedro-henrique-88a810186/" target="_blank">Ver mais</a>
         </div>
 
         <div class="exp-box">
@@ -114,7 +114,7 @@ Python
 Power BI
 SQL
           </pre>
-          <a class="btn" href="https://www.linkedin.com/in/pedro-henrique-88a810186/">Ver mais</a>
+          <a class="btn" href="https://www.linkedin.com/in/pedro-henrique-88a810186/" target="_blank">Ver mais</a>
         </div>
 
         <div class="exp-box">
@@ -127,7 +127,7 @@ Inglês (C2 - Fluente)
 Alemão (A2)
 Japonês (A1)
           </pre>
-          <a class="btn" href="https://www.linkedin.com/in/pedro-henrique-88a810186/">Ver mais</a>
+          <a class="btn" href="https://www.linkedin.com/in/pedro-henrique-88a810186/" target="_blank">Ver mais</a>
         </div>
       </div>
     </section>
@@ -137,17 +137,17 @@ Japonês (A1)
       <div class="ctf-container">
         <div class="ctf-box">
           <h3>Inglês</h3>
-          <a href="https://www.efset.org/cert/8va9ut"><img src="midia/pictures/ef_certificate.png"></a>
+          <a href="https://www.efset.org/cert/8va9ut" target="_blank"><img src="midia/pictures/ef_certificate.png"></a>
         </div>
     
         <div class="ctf-box-main">
           <h3>Análise de Dados</h3>
-          <a href="https://coursera.org/verify/professional-cert/9YGG6WLQPK59"><img src="midia/pictures/google_certificate.png"></a>
+          <a href="https://coursera.org/verify/professional-cert/9YGG6WLQPK59" target="_blank"><img src="midia/pictures/google_certificate.png"></a>
         </div>
     
         <div class="ctf-box">
           <h3>Power Bi</h3>
-          <a href="https://www.linkedin.com/learning/certificates/424fdc27d1c844c035b9c7ab3ba0830322c851a9b2e105e474f13ef52e56b363"><img  src="midia/pictures/powerbi_certificate.png"></a>
+          <a href="https://www.linkedin.com/learning/certificates/424fdc27d1c844c035b9c7ab3ba0830322c851a9b2e105e474f13ef52e56b363" target="_blank"><img  src="midia/pictures/powerbi_certificate.png"></a>
         </div>
       </div>
     </section>
@@ -162,7 +162,7 @@ Japonês (A1)
           <div class="portfolio-layer">
             <h4>Gran-Ultimate</h4>
             <p>Um site criado para atender um grupo focado em Cavaleiros do Zodíaco, contando com sistema automático de inscrições através de formulário integrado ao Google Planilhas.</p>
-            <a href="https://gran-ultimate.vercel.app/"><i class='bx bx-link-external'></i></a>
+            <a href="https://gran-ultimate.vercel.app/" target="_blank"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
 
@@ -171,7 +171,7 @@ Japonês (A1)
           <div class="portfolio-layer">
             <h4>Móvel Smart</h4>
             <p>Um site criado para atender uma marcenaria, criado para servir como um portfólio na nuvem, além de também ter um sistema de recebimento e envio de e-mails. Facilitando a comunicação com o cliente.</p>
-            <a href="https://movelsmart.vercel.app/"><i class='bx bx-link-external'></i></a>
+            <a href="https://movelsmart.vercel.app/" target="_blank"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
 
@@ -180,7 +180,7 @@ Japonês (A1)
           <div class="portfolio-layer">
             <h4>Vai e Faz</h4>
             <p>Um site criado para atender uma empresa focada em prestação de assitência técnica de forma remota.</p>
-            <a href="https://vaiefaz.vercel.app/"><i class='bx bx-link-external'></i></a>
+            <a href="https://vaiefaz.vercel.app/" target="_blank"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
 
@@ -189,7 +189,7 @@ Japonês (A1)
           <div class="portfolio-layer">
             <h4>Calculadora IMC</h4>
             <p>Aplicativo android desenvolvido para realizar o cálculo do IMC do usuário de modo simples, intuitivo e rápido.</p>
-            <a href="https://github.com/PedroHenrique431/Calculadora-IMC"><i class='bx bx-link-external'></i></a>
+            <a href="https://github.com/PedroHenrique431/Calculadora-IMC" target="_blank"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
 
@@ -198,7 +198,7 @@ Japonês (A1)
           <div class="portfolio-layer">
             <h4>Gerador de Nomes</h4>
             <p>Um gerador de nomes para android! Feito para ser simples e intuitivo (seja para o uso em RPG's, projetos de escrita, etc). Também é possível marcar os nomes que mais gostar para separá-los em um menu de favoritos!</p>
-            <a href="https://github.com/PedroHenrique431/Name-Generator"><i class='bx bx-link-external'></i></a>
+            <a href="https://github.com/PedroHenrique431/Name-Generator" target="_blank"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
       </div>
