--- a/index.html
+++ b/index.html
@@ -135,20 +135,34 @@ Japonês (A1)
     <section class="certificados" id="ctf">
       <h2 class="principal-sobre"> Minhas <span>Certificações!</span></h2>
       <div class="ctf-container">
-        <div class="ctf-box">
-          <h3>Inglês</h3>
-          <a href="https://www.efset.org/cert/8va9ut" target="_blank"><img src="midia/pictures/ef_certificate.png"></a>
-        </div>
-    
-        <div class="ctf-box-main">
-          <h3>Análise de Dados</h3>
-          <a href="https://coursera.org/verify/professional-cert/9YGG6WLQPK59" target="_blank"><img src="midia/pictures/google_certificate.png"></a>
-        </div>
-    
-        <div class="ctf-box">
-          <h3>Power Bi</h3>
-          <a href="https://www.linkedin.com/learning/certificates/424fdc27d1c844c035b9c7ab3ba0830322c851a9b2e105e474f13ef52e56b363" target="_blank"><img  src="midia/pictures/powerbi_certificate.png"></a>
-        </div>
+      <i id="left" class="bx bx-chevron-left"></i>
+        <ul class="carousel">
+          <li class="ctf-box card">
+            <h3>Mercado Financeiro</h3>
+            <a href="https://www.linkedin.com/learning/certificates/424fdc27d1c844c035b9c7ab3ba0830322c851a9b2e105e474f13ef52e56b363"
+              target="_blank"><img src="midia/pictures/finance_certificate.png" alt=""></a>
+          </li>
+          <li class="ctf-box card">
+            <h3>Análise de Dados</h3>
+            <a href="https://coursera.org/verify/professional-cert/9YGG6WLQPK59" target="_blank"><img
+                src="midia/pictures/google_certificate.png" alt=""></a>
+          </li>
+          <li class="ctf-box card">
+            <h3>Power Bi</h3>
+            <a href="https://www.linkedin.com/learning/certificates/424fdc27d1c844c035b9c7ab3ba0830322c851a9b2e105e474f13ef52e56b363"
+              target="_blank"><img src="midia/pictures/powerbi_certificate.png" alt=""></a>
+          </li>
+          <li class="ctf-box card">
+            <h3>Inglês</h3>
+            <a href="https://www.efset.org/cert/8va9ut" target="_blank"><img src="midia/pictures/ef_certificate.png" alt=""></a>
+            </l>
+          <li class="ctf-box card">
+            <h3>Excel</h3>
+            <a href="https://www.linkedin.com/learning/certificates/424fdc27d1c844c035b9c7ab3ba0830322c851a9b2e105e474f13ef52e56b363"
+              target="_blank"><img src="midia/pictures/excel_certificate.png" alt=""></a>
+          </li>
+        </ul>
+        <i id="right" class="bx bx-chevron-right"></i>
       </div>
     </section>
 
