--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ Japonês (A1)
           </li>
           <li class="ctf-box card">
             <h3>Excel</h3>
-            <a href="https://www.linkedin.com/learning/certificates/424fdc27d1c844c035b9c7ab3ba0830322c851a9b2e105e474f13ef52e56b363"
+            <a href="https://www.coursera.org/account/accomplishments/verify/H85NGLAAVRAV"
               target="_blank"><img src="midia/pictures/excel_certificate.png" alt=""></a>
           </li>
         </ul>
