--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ Japonês (A1)
       <i id="left" class="bx bx-chevron-left"></i>
         <ul class="carousel">
           <li class="ctf-box card">
-            <h3>Mercado Financeiro</h3>
+            <h3>Financial Markets</h3>
             <a href="https://www.linkedin.com/learning/certificates/424fdc27d1c844c035b9c7ab3ba0830322c851a9b2e105e474f13ef52e56b363"
               target="_blank"><img src="midia/pictures/finance_certificate.png" alt=""></a>
           </li>
