--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
         >
       </div>
 
-      <!-- <div class="imagem-home">
-        <img src="midia/pictures/a.png" alt="">
-      </div> -->
+      <div class="seta">
+        <i class='bx bx-chevron-down'></i>
+      </div>
     </section>
 
     <section class="sobre" id="sobre">
