--- a/index.html
+++ b/index.html
@@ -139,8 +139,7 @@ Japonês (A1)
         <ul class="carousel">
           <li class="ctf-box card">
             <h3>Mercados Financeiros</h3>
-            <a href="https://www.linkedin.com/learning/certificates/424fdc27d1c844c035b9c7ab3ba0830322c851a9b2e105e474f13ef52e56b363"
-              target="_blank"><img src="midia/pictures/finance_certificate.png" alt=""></a>
+            <img src="midia/pictures/finance_certificate.png" alt="" style="opacity: 0.2"><p class="breve">EM BREVE</p></img>
           </li>
           <li class="ctf-box card">
             <h3>Análise de Dados</h3>
