--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
         >
       </div>
 
-      <div class="seta">
+      <a class="seta" href="#sobre">
         <i class='bx bx-chevron-down'></i>
-      </div>
+      </a>
     </section>
 
     <section class="sobre" id="sobre">
