--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Main.css" />
-    <link
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      rel="stylesheet" 
-    />
-    <link rel="icon" type="image/x-icon" href="midia/pictures/ICO.ico">
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+    <link rel="stylesheet" href="./styles.css" />
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="../midia/pictures/ICO.ico">
     <title>PedroHbs - Portfólio</title>
   </head>
   <body>
@@ -37,7 +35,7 @@
         loop
         id="video-home"
       >
-        <source src="midia/Videos/stars.mp4" type="video/mp4" />
+        <source src="../midia/Videos/stars.mp4" type="video/mp4" />
       </video>
 
       <div class="home-content">
@@ -73,7 +71,7 @@
 
     <section class="sobre" id="sobre">
       <div class="img-sobre">
-        <img src="midia/pictures/sobre.svg" alt="" />
+        <img src="../midia/pictures/sobre.svg" alt="" />
       </div>
 
       <div class="conteudo-sobre">
@@ -139,26 +137,26 @@ Japonês (A1)
         <ul class="carousel">
           <li class="ctf-box card">
             <h3>Mercados Financeiros</h3>
-            <img src="midia/pictures/finance_certificate.png" alt="" style="opacity: 0.2"><p class="breve">EM BREVE</p></img>
+            <img src="../midia/pictures/finance_certificate.png" alt="" style="opacity: 0.2"><p class="breve">EM BREVE</p></img>
           </li>
           <li class="ctf-box card">
             <h3>Análise de Dados</h3>
             <a href="https://coursera.org/verify/professional-cert/9YGG6WLQPK59" target="_blank"><img
-                src="midia/pictures/google_certificate.png" alt=""></a>
+                src="../midia/pictures/google_certificate.png" alt=""></a>
           </li>
           <li class="ctf-box card">
             <h3>Power Bi</h3>
             <a href="https://www.linkedin.com/learning/certificates/424fdc27d1c844c035b9c7ab3ba0830322c851a9b2e105e474f13ef52e56b363"
-              target="_blank"><img src="midia/pictures/powerbi_certificate.png" alt=""></a>
+              target="_blank"><img src="../midia/pictures/powerbi_certificate.png" alt=""></a>
           </li>
           <li class="ctf-box card">
             <h3>Inglês</h3>
-            <a href="https://www.efset.org/cert/8va9ut" target="_blank"><img src="midia/pictures/ef_certificate.png" alt=""></a>
+            <a href="https://www.efset.org/cert/8va9ut" target="_blank"><img src="../midia/pictures/ef_certificate.png" alt=""></a>
           </li>
           <li class="ctf-box card">
             <h3>Excel</h3>
             <a href="https://www.coursera.org/account/accomplishments/verify/H85NGLAAVRAV"
-              target="_blank"><img src="midia/pictures/excel_certificate.png" alt=""></a>
+              target="_blank"><img src="../midia/pictures/excel_certificate.png" alt=""></a>
           </li>
         </ul>
         <i id="right" class="bx bx-chevron-right"></i>
@@ -171,7 +169,7 @@ Japonês (A1)
       <div class="portfolio-container">
         
         <div class="portfolio-box">
-          <img src="midia/pictures/cdz.png" alt="">
+          <img src="../midia/pictures/cdz.png" alt="">
           <div class="portfolio-layer">
             <h4>Gran-Ultimate</h4>
             <p>Um site criado para atender um grupo focado em Cavaleiros do Zodíaco, contando com sistema automático de inscrições através de formulário integrado ao Google Planilhas.</p>
@@ -180,7 +178,7 @@ Japonês (A1)
         </div>
 
         <div class="portfolio-box">
-          <img src="midia/pictures/movel.png" alt="">
+          <img src="../midia/pictures/movel.png" alt="">
           <div class="portfolio-layer">
             <h4>Móvel Smart</h4>
             <p>Um site criado para atender uma marcenaria, criado para servir como um portfólio na nuvem, além de também ter um sistema de recebimento e envio de e-mails. Facilitando a comunicação com o cliente.</p>
@@ -189,7 +187,7 @@ Japonês (A1)
         </div>
 
         <div class="portfolio-box">
-          <img src="midia/pictures/faz.png" alt="">
+          <img src="../midia/pictures/faz.png" alt="">
           <div class="portfolio-layer">
             <h4>Vai e Faz</h4>
             <p>Um site criado para atender uma empresa focada em prestação de assitência técnica de forma remota.</p>
@@ -198,7 +196,7 @@ Japonês (A1)
         </div>
 
         <div class="portfolio-box">
-          <img src="midia/pictures/imc.png" alt="">
+          <img src="../midia/pictures/imc.png" alt="">
           <div class="portfolio-layer">
             <h4>Calculadora IMC</h4>
             <p>Aplicativo android desenvolvido para realizar o cálculo do IMC do usuário de modo simples, intuitivo e rápido.</p>
@@ -207,7 +205,7 @@ Japonês (A1)
         </div>
 
         <div class="portfolio-box">
-          <img src="midia/pictures/nomes.png" alt="">
+          <img src="../midia/pictures/nomes.png" alt="">
           <div class="portfolio-layer">
             <h4>Gerador de Nomes</h4>
             <p>Um gerador de nomes para android! Feito para ser simples e intuitivo (seja para o uso em RPG's, projetos de escrita, etc). Também é possível marcar os nomes que mais gostar para separá-los em um menu de favoritos!</p>
@@ -250,7 +248,7 @@ Japonês (A1)
 
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="Main.js"></script>
+    <script src="./Main.js"></script>
 
   </body>
 </html>
