--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles.css" />
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="midia/pictures/ICO.ico">
-    <title>PedroHbs - Portfólio</title>
+    <title>PedroHbs -- Portfólio</title>
   </head>
   <body>
 
