--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <pre>
 C# 
 Python 
-Java 
+HTML 
 Js
           </pre>
           <a class="btn" href="https://www.linkedin.com/in/pedro-henrique-88a810186/" target="_blank">Ver mais</a>
@@ -107,7 +107,7 @@ Js
           <i class='bx bxs-data' ></i>
           <h3>Análise de dados</h3>
           <p>Análise de dados esteve muito presente na minha vida profissional/acadêmica (Iniciação científica) desde que iniciei meus estudos na graduação.</p>
-          <pre>R 
+          <pre>Excel 
 Python 
 Power BI
 SQL
@@ -122,7 +122,7 @@ SQL
           <pre>
 Português (Nativo - Fluente)
 Inglês (C2 - Fluente)
-Alemão (A2)
+Alemão (B1)
 Japonês (A1)
           </pre>
           <a class="btn" href="https://www.linkedin.com/in/pedro-henrique-88a810186/" target="_blank">Ver mais</a>
