--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles.css" />
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="midia/pictures/ICO.ico">
-    <title>PedroHbs -- Portfólio</title>
+    <title>PedroHbs - Portfólio</title>
   </head>
   <body>
 
@@ -82,6 +82,9 @@
           Informática pelo Instituto Federal de Educação, Ciência e Tecnologia
           de São Paulo (IFSP - 2017 a 2020).
         </p>
+        <p>  
+          No ano de 2024, ingressou no Itaú Unibanco, na área de Risco de mercado e Trade surveillance (atividades com foco no auxílio em automações e Analytics), onde permanece até o presente momento.
+        </p>
         
       </div>
     </section>
@@ -93,7 +96,7 @@
         <div class="exp-box">
           <i class='bx bx-code-alt' ></i>
           <h3>Programação</h3>
-          <p>Possuo uma experiência de cerca de 4 anos trabalhando com programação, tanto WEB quanto Mobile.</p>
+          <p>Possuo uma experiência de cerca de 4 anos trabalhando com programação (Web).</p>
           <pre>
 C# 
 Python 
