--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           de São Paulo (IFSP - 2017 a 2020).
         </p>
         <p>  
-          No ano de 2024, ingressou no Itaú Unibanco, na área de Risco de mercado e Trade surveillance (atividades com foco no auxílio em automações e Analytics), onde permanece até o presente momento.
+          No ano de 2024, ingressou no Itaú Unibanco, trabalhando na área de Risco de mercado e Trade surveillance (atividades com foco no auxílio em Automações e Analytics), onde permanece até o presente momento.
         </p>
         
       </div>
