--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
 
         <a
-          href="https://drive.google.com/file/d/1c_Xr0zrWek95AqYrC9Hl9FI-Whu6NwLN/view?usp=sharing"
+          href="https://drive.google.com/file/d/1EQoo4Lm3IuTchw37QLaHIPb9MTkk8qW1/view?usp=drivesdk"
           class="btn"
           >Baixar CV</a
         >
