--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
 
         <a
-          href="https://drive.google.com/file/d/1EQoo4Lm3IuTchw37QLaHIPb9MTkk8qW1/view?usp=drivesdk"
+          href="https://docs.google.com/document/d/1OsZKEfNnD1dCKYCdrUDAguT1YIFLFLovsEP42pAzhZ4/edit?usp=sharing"
           class="btn"
           >Baixar CV</a
         >
