--- a/index.html
+++ b/index.html
@@ -83,7 +83,10 @@
           de São Paulo (IFSP - 2017 a 2020).
         </p>
         <p>  
-          No ano de 2024, ingressou no Itaú Unibanco, trabalhando na área de Risco de mercado e Trade surveillance (atividades com foco no auxílio em Automações e Analytics), onde permanece até o presente momento.
+          No ano de 2024, ingressou no Itaú Unibanco, trabalhando na área de Risco de mercado e Trade surveillance (atividades com foco no auxílio em Automações e Analytics), 
+        </p>
+        <p>
+          Em 2025, passou a fazer parte da equipe de Riscos Asset do banco Safra, onde permanece até o presente momento.
         </p>
         
       </div>
@@ -206,9 +209,9 @@ Japonês (A1)
         <div class="portfolio-box">
           <img src="midia/pictures/faz.png" alt="">
           <div class="portfolio-layer">
-            <h4>Vai e Faz</h4>
-            <p>Um site criado para atender uma empresa focada em prestação de assitência técnica de forma remota.</p>
-            <a href="https://vaiefaz.vercel.app/" target="_blank"><i class='bx bx-link-external'></i></a>
+            <h4>Projeto_Banking</h4>
+            <p>um projeto de análise de dados bancários para explorar técnicas de análise de risco e identificação de fraudes.</p>
+            <a href="https://github.com/PedroHenrique431/Banking" target="_blank"><i class='bx bx-link-external'></i></a>
           </div>
         </div>
 
